--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -1,4 +1,4 @@
-- provide(:title, @organization.name )
+- provide(:meta_title, @organization.name + ' | clarat')
 - content_for :canonical_url,
               organization_url(section: @organization.canonical_section,
                                id: @organization.slug)
