--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -634,6 +634,14 @@
       padding-top: 0;
       width: 100%;
     }
+    
+    &[aria-selected="true"] {
+      body.family &,
+      body.refugees & {
+        color: $brand_brown;
+        text-decoration: underline;
+      } 
+    }
   }
 
   .nav-sections__notification {
