Apply a11y fixes that haven't found their way into the codebase via other features/fixes, for #854

--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -38,4 +38,4 @@ div.Distributor__search-form
       = f.input :language, as: :hidden
       = f.input :sort_order, as: :hidden
       = f.input :section, as: :hidden
-    button.main-search__submit = t '.button'
+    button.main-search__submit[type="submit"] = t '.button'
