Better map hiding via CSS for #1107

--- a/app/assets/stylesheets/base/_aside.scss
+++ b/app/assets/stylesheets/base/_aside.scss
@@ -19,5 +19,10 @@
 }
 
 .aside-standard__container {
+  display: none;
   margin-bottom: 50px;
+
+  body.has-google-map & {
+    display: block;
+  }
 }
