--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -11,7 +11,7 @@ div.Distributor__search-form
                           autocomplete: 'off',
                           autofocus: true,
                           class: 'input-xlg' }
-
+      - binding.pry
       = f.input :search_location, label: t('.loc_label'), hint: false,
                                   wrapper_html: {class: 'JS-Geolocation__wrapper'},
                                   input_html: { \
