--- a/app/assets/javascripts/location/presenter.coffee.erb
+++ b/app/assets/javascripts/location/presenter.coffee.erb
@@ -1,6 +1,14 @@
 class Clarat.Location.Presenter extends ActiveScript.Presenter
   constructor: ->
+    # It's easier with Ruby, sorry!
+    @currentLocationList = <%= %i[ar de en fa fr pl ru tr].map {|t| I18n.backend.send(:translations)[t][:conf][:current_location]} %>
+    
+    # Make sure input value gets updated with the proper translation if current_location has been set
+    if @currentLocationList.includes($('.JS-Geolocation__display').val())
+      $('.JS-Geolocation__display')[0].value = I18n.t('conf.current_location')
+    
     @searchLocationInput = $('.JS-Geolocation__display')
+      
     return null unless @searchLocationInput.length
 
     super()
@@ -32,19 +40,15 @@ class Clarat.Location.Presenter extends ActiveScript.Presenter
   # Check if cookie had was saved to use "my location" and if so, use it again.
   onLoad: ->
     @startGarbageCollection()
-    #debugger
-    current_location = I18n.t('conf.current_location')
    
     # If 'Mein Standort' has been set and user switches to another language, we want to keep the highlighting and update the form input to the equivalent, e.g. 'My location'
-    if $('.JS-Geolocation__display').val() == 'Mein Standort' #To Do: check for translations
+
+    if @currentLocationList.includes($('.JS-Geolocation__display').val())
       $('.JS-Geolocation__display')[0].value = current_location
       $('.JS-Geolocation__display')[0].disabled = true
       @searchLocationInput = $('.JS-Geolocation__display')
-    
-    console.log(@searchLocationInput.val())
-    #debugger
-    if @searchLocationInput.val() is current_location
-      #console.log(@searchLocationInput.val())
+
+    if @searchLocationInput.val() is I18n.t('conf.current_location')
       # Turn input into display field because we don't just want the string
       # "My Location" in there in plain text
       Clarat.Location.Operation.TurnInputIntoMyLocationDisplay.run()
