--- a/app/assets/javascripts/location/presenter.coffee.erb
+++ b/app/assets/javascripts/location/presenter.coffee.erb
@@ -42,7 +42,7 @@ class Clarat.Location.Presenter extends ActiveScript.Presenter
     # If 'Mein Standort' has been set and user switches to another language, we want to keep the highlighting and update the form input to the equivalent, e.g. 'My location'
 
     if @currentLocationList.includes($('.JS-Geolocation__display').val())
-      $('.JS-Geolocation__display')[0].value = current_location
+      $('.JS-Geolocation__display')[0].value = I18n.t('conf.current_location')
       $('.JS-Geolocation__display')[0].disabled = true
       @searchLocationInput = $('.JS-Geolocation__display')
 
