Hotfix: Reposition geolocation remove btn in rtl

--- a/app/assets/stylesheets/modules/_js-geolocation.scss
+++ b/app/assets/stylesheets/modules/_js-geolocation.scss
@@ -59,6 +59,11 @@
   color: $brand_orange;
   font-size: 22px;
 
+  html[dir="rtl"] & {
+    left: 15px;
+    right: auto;
+  }
+
   &:hover {
     cursor: pointer;
   }
