--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -50,6 +50,10 @@
       margin: 6px 15px 0 0;
       border-bottom: 1px dashed transparent;
 
+      html[dir="rtl"] & {
+        float: right;
+      }
+
       &[title] {
         border-color: $brand_brown;
       }
