Add styling for tag and category listing on offer show, #1144

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,7 @@
 @import "modules/result-order";
 @import "modules/top-bar";
 @import "modules/breadcrumbs";
+@import "modules/offfer-taxonomy";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
