--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -28,27 +28,14 @@
             == translation_block @offer.translation_automated? do
               == @offer.description
           .Offer-taxonomy
-            h4.Offer-taxonomy__headline Dieses Angebot hilft dir bei:
-            / ToDo: Delete line above, use one below:
-            / h4.Offer-taxonomy__headline = t '.what.offertaxonomy.heading'
+            h4.Offer-taxonomy__headline = t '.what.offertaxonomy.heading'
             ul.Offer-taxonomy__list
-              / ToDo: Loop thru tags and categories, #1144
-              li.Offer-taxonomy__listitem Notfall
-              li.Offer-taxonomy__listitem Betreuung
-              li.Offer-taxonomy__listitem Lorem
-              li.Offer-taxonomy__listitem Ipsum
-              li.Offer-taxonomy__listitem Dolor Sit
-              li.Offer-taxonomy__listitem Amet
-              li.Offer-taxonomy__listitem Nobis
-              li.Offer-taxonomy__listitem Psychoterror
-              li.Offer-taxonomy__listitem Notfall
-              li.Offer-taxonomy__listitem Betreuung
-              li.Offer-taxonomy__listitem Lorem
-              li.Offer-taxonomy__listitem Ipsum
-              li.Offer-taxonomy__listitem Dolor Sit
-              li.Offer-taxonomy__listitem Amet
-              li.Offer-taxonomy__listitem Nobis
-              li.Offer-taxonomy__listitem Psychoterror
+              - @offer.categories.each do |cat|
+                li.Offer-taxonomy__listitem
+                  = cat.send("name_#{locale}") == nil ? cat.name_en : cat.send("name_#{locale}")
+              - @offer.tags.each do |tag|
+                li.Offer-taxonomy__listitem
+                  = tag.send("name_#{locale}") == nil ? tag.name_en : tag.send("name_#{locale}")
 
       / What to do next?
       = render 'offers/show/next_steps', offer: @offer
