--- a/app/views/contacts/popup.html.slim
+++ b/app/views/contacts/popup.html.slim
@@ -1,6 +1,11 @@
 / prepare modal
+h1= t 'layouts.partials.modal.popup.headline'
+p= t 'layouts.partials.modal.popup.text'
 = simple_form_for @contact, html: { class: 'contact-form' }, remote: true do |f|
-   = f.input :name, label: false, hint: false
-   = f.input :email, label: false, hint: false
+   = f.input :name, label: '* Name', hint: false
+   = f.input :email, label: '* E-mail', hint: false
+   = f.hidden_field :message, value: 'Ich möchte an der Umfrage teilnehmen'
+   = f.button :submit, label: t('layouts.partials.modal.popup.button')
    = link_to 'hier geht es zur Startseite', '/'
+p= t 'layouts.partials.modal.popup.footer'
     
