Cleanup and revert back to showing only sub-categories if applicable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,7 +51,7 @@
 @import "modules/result-order";
 @import "modules/top-bar";
 @import "modules/breadcrumbs";
-@import "modules/offfer-taxonomy";
+@import "modules/offer-taxonomy";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
