--- a/app/assets/stylesheets/modules/_offer-taxonomy.scss
+++ b/app/assets/stylesheets/modules/_offer-taxonomy.scss
@@ -13,10 +13,10 @@
   margin: .4em .75em .4em 0;
   color: #fff;
   display: inline-block;
-  padding: 0.125em 2.375em 0.125em 0.66em;
+  padding: 0.125em 0.66em 0.125em 0.66em;
   // Do not use background short hand because of MS Edge,
   // https://developer.microsoft.com/microsoft-edge/platform/issues/846292/
-  background: $brand_blue image-url('ico_folder.svg') no-repeat;
+  background: $brand_blue;
   background-position: calc(100% - 8px) center;
   background-size: auto 1em;
 }
