--- a/app/views/contacts/popup.html.slim
+++ b/app/views/contacts/popup.html.slim
@@ -8,10 +8,7 @@
     = f.button :submit, value: t('layouts.partials.modal.popup.button')
   p.footer = t 'layouts.partials.modal.popup.footer'
 
-script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"
-
-= javascript_include_tag \
-  "jquery.popupoverlay"
+script src="/assets/application.js"
 
 javascript:
   $('.JS-modal').popup('show');
