--- a/app/views/contacts/popup.html.slim
+++ b/app/views/contacts/popup.html.slim
@@ -1,13 +1,15 @@
-script src="/assets/application.js"
-= modal_for 'popup', autoopen: false do
-  h1= t 'layouts.partials.modal.popup.headline'
-  p= t 'layouts.partials.modal.popup.text'
-  = simple_form_for @contact do |f|
-    = f.input :name, label: false, placeholder: 'Name*'
-    = f.input :email, label: false, placeholder: 'Email*'
-    = f.hidden_field :message, value: 'Ich möchte an der Umfrage teilnehmen'
-    = f.button :submit, value: t('layouts.partials.modal.popup.button')
-  p.footer = t 'layouts.partials.modal.popup.footer'
+head
+  script src="/assets/application.js"
+body
+  = modal_for 'popup', autoopen: false do
+    h1= t 'layouts.partials.modal.popup.headline'
+    p= t 'layouts.partials.modal.popup.text'
+    = simple_form_for @contact do |f|
+      = f.input :name, label: false, placeholder: 'Name*'
+      = f.input :email, label: false, placeholder: 'Email*'
+      = f.hidden_field :message, value: 'Ich möchte an der Umfrage teilnehmen'
+      = f.button :submit, value: t('layouts.partials.modal.popup.button')
+    p.footer = t 'layouts.partials.modal.popup.footer'
 
 javascript:
   $('.JS-modal').popup('show');
