--- a/app/views/contacts/popup.html.slim
+++ b/app/views/contacts/popup.html.slim
@@ -1,4 +1,5 @@
 head
+  script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"
   script src="/assets/application.js"
 body
   = modal_for 'popup', autoopen: false do
