clarat-org/clarat#1156 - use new stamp methods to display string and use constants of TargetAudienceFiltersOffer

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -13,8 +13,7 @@
     - cache [@offer, @offer.target_audience_filters.pluck(:id).sort.join(','), @current_section, @locale] do
       .page-detail__stamp[itemscope itemtype='http://schema.org/Audience']
         div[itemprop='name']
-          - stamp_method = @current_section == 'family' ? "stamp_family" : "stamp_refugees"
-          = @offer.send(stamp_method, @locale)
+          = @offer.send("stamps_string", @locale)
 
     / Left side (in desktop)
     .section-wrapper-major
