text and style updated

--- a/app/assets/stylesheets/modules/_js-modal.scss
+++ b/app/assets/stylesheets/modules/_js-modal.scss
@@ -42,16 +42,17 @@
 
 #popup {
   width: 800px;
-  font-size: 22px;
 
-  p.footer {
-    font-size: 12px;
+  p {
+    &.footer {
+      font-size: 0.7em;
+    }
   }
 
   input {
     margin: 10px 0;
     width: 100%;
-    padding: 10px;
+    padding: 0.5em;
   }
 }
 
