--- a/app/views/contacts/popup.html.slim
+++ b/app/views/contacts/popup.html.slim
@@ -2,9 +2,8 @@
   h2= t 'layouts.partials.modal.popup.headline'
   p.text= t 'layouts.partials.modal.popup.text'
   = simple_form_for @contact do |f|
-    = f.input :name, label: false, hint: false,
-                   input_html: { placeholder: t('contact.new.name') }
-    = f.input :email, label: false, input_html: { placeholder: t("contact.new.email") }
+    = f.input :name, label: false, input_html: { placeholder: t('layouts.partials.modal.popup.name_placeholder') }
+    = f.input :email, label: false, input_html: { placeholder: t('layouts.partials.modal.popup.email_placeholder') }
     = f.hidden_field :message, value: t('layouts.partials.modal.popup.message')
     = f.button :submit, value: t('layouts.partials.modal.popup.button')
   p.footer = t 'layouts.partials.modal.popup.footer'
