--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -23,8 +23,18 @@
           = t '.what.heading'
           == automation_warning @offer.translation_automated?
         .section-content__body
-          == translation_block @offer.translation_automated? do
-            == @offer.description
+          .section-content--editiorial
+            == translation_block @offer.translation_automated? do
+              == @offer.description
+          .Offer-taxonomy
+            h4.Offer-taxonomy__headline = t '.what.offertaxonomy.heading'
+            ul.Offer-taxonomy__list
+              - @offer.categories.each do |cat|
+                li.Offer-taxonomy__listitem
+                  = cat.send("name_#{locale}") == nil ? cat.name_en : cat.send("name_#{locale}")
+              - @offer.tags.each do |tag|
+                li.Offer-taxonomy__listitem
+                  = tag.send("name_#{locale}") == nil ? tag.name_en : tag.send("name_#{locale}")
 
       / What to do next?
       = render 'offers/show/next_steps', offer: @offer
