potential fix for clarat-org/clarat#1193

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -13,7 +13,7 @@
     / Offer Stamp
     .page-detail__stamp[itemscope itemtype='http://schema.org/Audience']
       div[itemprop='name']
-        = @offer.send("stamps_string", @locale)
+        = @offer.send("stamps_string", locale)
 
     / Left side (in desktop)
     .section-wrapper-major
