--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -1,4 +1,5 @@
 - provide(:title, t('.title') )
+- provide(:meta_description, t('.meta_description'))
 - cache ['about_page', I18n.locale] do
 
   main.content-main.content-main--wide.template--pages-about
