--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -27,6 +27,10 @@ footer.footer-main
           ul.nav-site__list
             li.nav-site__listitem
               = link_to t('.blog'), 'http://blog.clarat.org/'
+            li.nav-site__listitem.nav-site__listitem--facebook-refugees
+              = link_to t('.facebook_refugees'), 'https://www.facebook.com/claratrefugees/'
+            li.nav-site__listitem.nav-site__listitem--facebook-family
+              = link_to t('.facebook_family'), 'https://www.facebook.com/clarat-family-1067489519960102/'
 
 
         nav.nav-site
