Fix for last commit: show fb links always on template--pages-section_choice, #1217

--- a/app/assets/stylesheets/navigation/_nav-site.scss
+++ b/app/assets/stylesheets/navigation/_nav-site.scss
@@ -57,4 +57,8 @@
     background-size: contain;
     background: image-url('ico_facebook.svg') no-repeat left center;
   }
+
+  body.template--pages-section_choice & a {
+    display: block;
+  }
 }
