--- a/app/views/layouts/partials/_javascript_config.html.slim
+++ b/app/views/layouts/partials/_javascript_config.html.slim
@@ -4,8 +4,8 @@ javascript:
   window.Clarat = {
     // Algolia
     Algolia: {
-      appID: "#{Rails.application.secrets.algolia['app_id']}",
-      apiKey: "#{Rails.application.secrets.algolia['pub_key']}",
+      appID: "#{Rails.application.secrets.algolia[:app_id]}",
+      apiKey: "#{Rails.application.secrets.algolia[:pub_key]}",
       personalIndexName: "#{IndexChoice.personal}",
       remoteIndexName: "#{IndexChoice.remote}"
     }
