switched to work in progress branch of clarat_base and adjusted views, tests, fixtures and factories accordingly

--- a/app/views/offers/show/_next_steps.html.slim
+++ b/app/views/offers/show/_next_steps.html.slim
@@ -10,7 +10,7 @@ section.section-content.section-content--nextsteps
       == offer.next_steps_for_current_locale
     - else
       == translation_block translation_automated do
-        == offer.old_next_steps
+        == offer.translated_old_next_steps
 
     - if offer.code_word && !offer.code_word.empty?
       p
