--- a/app/views/offers/show/_opening_section.html.slim
+++ b/app/views/offers/show/_opening_section.html.slim
@@ -20,4 +20,4 @@ section.section-content.section-content--when
       br
     .section-content--openingspecification
       == translation_block offer.translation_automated?
-        == offer.opening_specification
+        == offer.translated_opening_specification
