--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -8,7 +8,7 @@
     header.page-detail__header
       h2.page-detail__title
         == translation_block @offer.translation_automated? do
-          = @offer.name
+          = @offer.translated_name
 
     / Offer Stamp
     .page-detail__stamp[itemscope itemtype='http://schema.org/Audience']
@@ -25,7 +25,7 @@
         .section-content__body
           .section-content--editiorial
             == translation_block @offer.translation_automated? do
-              == @offer.description
+              == @offer.translated_description
           .Offer-taxonomy
             h4.Offer-taxonomy__headline = t '.what.offertaxonomy.heading'
             ul.Offer-taxonomy__list
