--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -161,7 +161,8 @@
   }
 
   .Distributor__search-form {
-    @extend %clarat_rounding_start;
+    @include clarat_rounding_start;
+
     position: relative;
     right: auto;
     width: 100%;
