--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -26,7 +26,7 @@ footer.footer-main
         nav.nav-site
           ul.nav-site__list
             li.nav-site__listitem
-              = link_to t('.blog'), 'http://blog.clarat.org/'
+              = link_to t('.blog'), 'https://plus.clarat.org/'
             li.nav-site__listitem.nav-site__listitem--facebook-refugees
               = link_to t('.facebook_refugees'), 'https://www.facebook.com/claratrefugees/'
             li.nav-site__listitem.nav-site__listitem--facebook-family
