--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -144,4 +144,4 @@
   / prepare modal
 - if @no_cookie
   .user-popup
-    = render 'contacts/popup'
+    = render 'contacts/popup', contact: @contact
