--- a/app/views/layouts/modal_create.js.erb
+++ b/app/views/layouts/modal_create.js.erb
@@ -1,1 +1,5 @@
 $('.Contact-Submit').trigger('ContactForm::CreateSuccess');
+
+// temporay solution for user popup
+$('#popup').hide();
+$('#popup_background').hide();
