--- a/app/views/contacts/new.js.erb
+++ b/app/views/contacts/new.js.erb
@@ -1,3 +1,3 @@
-$('#new_contact').replaceWith(
+$('.contact-request').replaceWith(
   "<%= j render('/contacts/shared/new', contact: @contact) %>"
 );
