--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -23,3 +23,7 @@ noscript.NoScript
 = modal_for 'unavailable_location_overlay', autoopen: false do
   p= t '.unavailable_location_modal'
   = render '/update_requests/new', update_request: @update_request
+
+/ prepare fake door Modal
+= modal_for 'more_information_overlay', autoopen: false do
+  p= 'Hello hello turn the radio on. Is there anybody out there?'  
