--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,7 @@
 @import "modules/section-choice";
 @import "modules/type-results";
 @import "modules/result-order";
+@import "modules/more-information";
 @import "modules/top-bar";
 @import "modules/breadcrumbs";
 @import "modules/offer-taxonomy";
