--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -833,6 +833,16 @@
     }
   }
 
+  .more-information-text,
+  .JS-MoreInformationButton {
+    font-size: 14px;
+    max-width: 300px;
+  }
+
+  .JS-MoreInformationButton {
+    width: 130px;
+  }
+
   .Type-results__link {
     font-size: 14px;
     width: 100%;
@@ -907,6 +917,10 @@
   .hint__icon {
     float: none;
     font-size: 21px;
+  }
+
+  .more-information-text {
+    width: 50%;
   }
 
   // Misc ######################################
