--- a/app/assets/stylesheets/modules/_js-modal.scss
+++ b/app/assets/stylesheets/modules/_js-modal.scss
@@ -56,7 +56,7 @@
   }
 }
 
-#unavailable_location_overlay {
+#unavailable_location_overlay, #more_information_overlay {
   .formtastic {
     &.update_request {
       margin-top: 25px;
