add widget css file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,6 +53,7 @@
 @import "modules/top-bar";
 @import "modules/breadcrumbs";
 @import "modules/offer-taxonomy";
+@import "modules/widget";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
