--- a/app/views/layouts/widget.html.slim
+++ b/app/views/layouts/widget.html.slim
@@ -59,7 +59,16 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar || I18n.locale==:fa
         h1.Logo.Logo--notstart style="float:none"
         .widget-text
           h2 Einfach Hilfe finden auf clarat.org
-          p clarat.org ist ein Verzeichnis mit Hilfsangeboten für geflüchtete Menschen. Gib ein Thema und einen Standort ein und klicke auf 'Suchen'!
+          p clarat.org hat für dich das Internet nach Hilfsangeboten für Geflüchtete durchsucht.
+          p Jetzt Hilfe finden:
+          h3 Und so funktioniert es:
+          ol
+            li Gib ein Thema ein, zu dem du nach Hilfe suchst
+            li Gib den Ort an, in dem du suchst
+            li Klicke auf die Lupe oder die Enter-Taste
+            li Du wirst auf unsere Seite mit den Suchergebnissen weitergeleitet
+            li Schau dir die Suchergebnisse an und wähle ein Angebot
+
         .Distributor.Distributor--navigation style="float:none;height:105px;"
           = render '/offers/shared/search_form', search_form: @search_form || SearchForm.new(cookies),
                                                  labels: :short,
