--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -564,6 +564,14 @@
   //  padding-top: 20px;
   //}
 
+  .Listing-results__offer {
+    padding-right: 32px;
+    background-image: image-url("ico_skinny_double_arrow--right.svg");
+    background-position: calc(100% - 9px) center;
+    background-repeat: no-repeat;
+    background-size: 12px auto;
+  }
+
   .Listing-results__expander {
     display: block;
     position: absolute;
@@ -808,10 +816,6 @@
 
   .Listing-results__meta {
     display: none;
-
-    &.is-expanded {
-      display: block;
-    }
   }
 
   li[class^="FAQ__ico"] {
