--- a/app/views/layouts/widget.html.slim
+++ b/app/views/layouts/widget.html.slim
@@ -55,29 +55,5 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar || I18n.locale==:fa
 
   body class="#{@current_section} #{(I18n.locale==:fa)?'far':I18n.locale} template--#{controller_name}-#{action_name}" data-section=@current_section
     .page-wrap
-      .wrapper-inner
-        h1.Logo.Logo--notstart style="float:none"
-        br
-        .Distributor.Distributor--start style="float:none;"
-          - search_form = @search_form || SearchForm.new(cookies)
-          = render '/offers/shared/search_form', search_form: search_form,
-                                                 labels: :short,
-                                                 current_section: @current_section
-          - cache ['category_navigation', @current_section, I18n.locale] do
-            nav.nav-sections
-              h3.nav-sections__headline Oder suche nach Kategorien
-
-              ul.nav-sections__list
-                - Category.mains.in_section(@current_section).each do |main|
-                  li.nav-sections__listitem(
-                    class="nav-sections__listitem--#{main.icon}"
-                  )
-                    = link_to main.name, offers_path( \
-                    'search_form[category]' => main.name,
-                    'search_form[search_location]' => \
-                    search_form.search_location,
-                    'search_form[generated_geolocation]' => \
-                    search_form.generated_geolocation,
-                    'search_form[section]' => \
-                    @current_section),
-                    locale: I18n.locale
+      #yield-wrap
+        = yield
