make sure logo shows on mobile

--- a/app/views/pages/widget_swaf.html.slim
+++ b/app/views/pages/widget_swaf.html.slim
@@ -1,5 +1,5 @@
 .wrapper-inner
-  h1.Logo.Logo--notstart style="float:none;"
+  h1.Logo style="float:none; display:block; position: relative;"
   br
   .Distributor.Distributor--start style="float:none; height: 105px"
     - search_form = @search_form || SearchForm.new(cookies)
