--- a/app/views/layouts/widget.html.slim
+++ b/app/views/layouts/widget.html.slim
@@ -57,3 +57,4 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar || I18n.locale==:fa
     .page-wrap
       #yield-wrap
         = yield
+    = render 'layouts/partials/general_assets'
