--- a/app/views/pages/widget_hg.html.slim
+++ b/app/views/pages/widget_hg.html.slim
@@ -1,7 +1,7 @@
 .wrapper-inner
   h1.Logo.Logo--start style="float:none;"
   br
-  .Distributor.Distributor--start style="float:none; height: 105px;"
+  .Distributor.Distributor--start style="float:none; max-height: 105px;"
     - search_form = @search_form || SearchForm.new(cookies)
     = render '/offers/shared/search_form', search_form: search_form,
                                            labels: :short,
