--- a/app/views/layouts/widget.html.slim
+++ b/app/views/layouts/widget.html.slim
@@ -58,3 +58,8 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar || I18n.locale==:fa
       #yield-wrap
         = yield
     = render 'layouts/partials/general_assets'
+
+javascript:
+  $('document').ready(function(){
+    $('.JS-Cookie-warning').remove()
+  });
